fix double scroll bug

--- a/hxw_blog/static/css/article/article_details.css
+++ b/hxw_blog/static/css/article/article_details.css
@@ -409,8 +409,6 @@
 
 pre {
     white-space: pre;
-    white-space: pre-wrap;
-    word-wrap: break-word;
 }
 
 .flex-text-wrap {
