--- a/hxw_blog/static/css/main.css
+++ b/hxw_blog/static/css/main.css
@@ -26,6 +26,14 @@ a:hover {
     box-sizing: border-box;
 }
 
+code, kbd, pre, samp {
+    font-size: 15px;
+}
+
+pre {
+
+}
+
 .header {
     padding-top: 8px;
     padding-bottom: 8px;
