--- a/microsite/static/css/main.css
+++ b/microsite/static/css/main.css
@@ -12,6 +12,10 @@ p {
     color: #333;
 }
 
+code, kbd, pre, samp {
+    font-size: 16px;
+}
+
 .mui-bar ~ .mui-content .mui-fullscreen {
     top: 44px;
     height: auto;
